--- a/SiaSkynet.Sample.Blazor/wwwroot/index.html
+++ b/SiaSkynet.Sample.Blazor/wwwroot/index.html
@@ -34,6 +34,37 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="https://siasky.net/hns/sky-id/skyid.js"></script>
+    <script>
+        // detect if app is opened on localhost for development
+        if (window.location.hostname == 'idtest.local' || window.location.hostname == 'localhost' || window.location.protocol == 'file:') {
+            var devMode = true
+        } else {
+            var devMode = false
+        }
+
+        var opts = { 'devMode': devMode }
+        var skyid = new SkyID('App name', skyidEventCallback, opts)
+
+        function skyidEventCallback(message) {
+            switch (message) {
+                case 'login_fail':
+                    console.log('Login failed')
+                    break;
+                case 'login_success':
+                    console.log('Login succeed!')
+                    DotNet.invokeMethodAsync('SiaSkynet.Sample.Blazor', 'LoginSuccess')
+                    break;
+                case 'destroy':
+                    console.log('Logout succeed!')
+                    break;
+                default:
+                    console.log(message)
+                    break;
+            }
+        }
+    </script>
+
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
